--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-  <title>App Name: A Coding Project By Joy Dutta</title>
+  <title>ReflectaWord: A Coding Project By Joy Dutta</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,6 +11,10 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
+  <!-- Google Font  -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
   <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/5db21ba9c6.js" crossorigin="anonymous"></script>
 
@@ -25,7 +29,7 @@
   <!-- ==== Nav Section ==== -->
   <nav class="navbar navbar-expand-md navbar-dark fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="./img/White logo - no background.svg" alt="Brand logo color background" width="30" height="24" class="d-inline-block align-text-top">APP NAME</img></a>
+      <a class="navbar-brand logoFont" href="#"><img src="./img/White logo - no background.svg" alt="Brand logo color background" width="30" height="24" class="d-inline-block align-text-top mx-2">ReflectaWord</img></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
         aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -57,11 +61,11 @@
     <div class="container col-xxl-8 px-4 py-5">
       <div class="row row-cols-1 row-cols-lg-2 gy-2">
         <div class="col order-last order-lg-first">
-          <h1 class="display-5 fw-bold lh-1 mb-3">APP NAME: A coding project</h1>
-          <h4 class="lead">Live life one loop at a time.A Javascript App that takes the number inputs, any number from 0 to 100, and displays them on the screen. Note: Even numbers are displayed in <strong>BOLD</strong></h4>
+          <h1 class="display-7 fw-bold lh-1 mb-3 mt-1">ReflectaWord: A coding project</h1>
+          <h6 class="lead">"A Toyota's a Toyota.", "Never odd or even.",and "A Santa at NASA." are all examples of <strong><em>Palindromes</em></strong>. A palindrome is a word, phrase or a sequence that reads the same backward as forward. This programme checks whether the text entered by the user is a <strong>PALINDROME</strong> </h6>
           <ul class="fa-ul pt-2 checklist">
           <li>
-            <span class="fa-li">
+            <span class="fa-li"> 
               <i class="fas fa-check-square"></i>
             </span>
             CSS Layout and Bootstrap
@@ -106,7 +110,7 @@
           </li>
           </ul>
           <div>
-            <a href="app.html" type="button" class="btn btn-lg btn-outline-dark px-4 me-md-2">Try It Out!</a>
+            <a href="app.html" type="button" class="btn btn-lg btn-outline-dark px-4 me-md-2">Check Now!</a>
           </div>
           <h5 class="fw-bold mt-5">
             Technologies Used:
@@ -130,8 +134,8 @@
           </div>
         </div>
         <div class="col img-container">
-          <img src="./img/giphy.gif" alt="Counter App Logo" class="img-fluid center-block d-block mx-auto" width="450" height="200">
-          <img src="./img/counter-app.png" alt="" class="counter-app-img">
+          <img src="./img/png/logo-color.png" alt="ReflectaWord App Logo" class="img-fluid center-block d-block mx-auto" width="450" height="400">
+          
         </div>
       </div>
     </div>
@@ -149,7 +153,7 @@
         <div class="col d-flex justify-content-start justify-content-lg-center">
           <img src="./img/White logo - no background.svg" alt="" height="35">
         </div>
-        <div class="col d-flex justify-content-start justify-content-lg-end algin-items-center border border-success">
+        <div class="col d-flex justify-content-start justify-content-lg-end algin-items-center">
           <div class="row">
             <div class="col social">
               <a href="#" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
